# SemaTree

./: .gitignore  README.md  pyproject.toml
docs/: agent-interaction.md  how-it-works.md  tree-structure.md
evaluation/: README.md  REPORT.md  __init__.py  config.py
evaluation/analysis/: accuracy_eval.py  judge_app.py  streamlit_dashboard.py  visualize_results.py
evaluation/corpus/: fetcher.py
evaluation/dataset/: generator.py
evaluation/results/: accuracy_analysis_all.json
evaluation/runners/: run_evaluation.py  run_scale_test.py
evaluation/scoring/: quality_judge.py
evaluation/systems/: agentic_system.py  rag_baseline.py
src/agentic_index/: builder.py  cli.py  composer.py  fs_store.py  llm.py  models.py  summarizer.py  updater.py
src/agentic_index/server/: mcp_server.py
src/agentic_index/structurers/: semantic.py
src/sema_tree/: __init__.py  builder.py  cli.py  client.py  composer.py  fs_store.py  llm.py  models.py  search.py  summarizer.py  updater.py
src/sema_tree/crawlers/: __init__.py  base.py  local.py  web.py
src/sema_tree/server/: __init__.py  mcp_server.py
src/sema_tree/structurers/: __init__.py  base.py  llm_based.py  path_based.py  semantic.py
src/sema_tree/web/: __init__.py  app.py
src/sema_tree/web/static/: index.html
tests/: test_builder.py  test_composer.py  test_fs_store.py  test_llm_providers.py  test_mcp_server.py  test_models.py  test_search.py  test_summarizer.py  test_updater.py
tests/test_crawlers/: test_local.py  test_web.py
tests/test_structurers/: test_llm_based.py  test_path_based.py  test_semantic.py
